Fix misc validation bugs
Fix nested <form> elements (caused by formtable.js)
Use native browser's validation in UIParse before manual validation
Fix validation errors not showing up in query builder
Fix validation errors not showing up for fields used outside forms
Make Query Builder be contained in a <form> element
Make "Query" button in the query builder be the submit button
Fix UIParse building [pattern] attribute incorrectly

--- a/specifyweb/frontend/js_src/css/specifyform.css
+++ b/specifyweb/frontend/js_src/css/specifyform.css
@@ -316,7 +316,8 @@ input[type='submit'].saveblocked {
 }
 
 .saveblocked,
-input:not(:required):not([pattern]):invalid,
+input:not(.specify-field):invalid,
+input.touched:invalid,
 form.submitted input:invalid,
 input.touched:invalid {
     background-color: red !important;
